@@ -1,3 +1,8 @@
+Mon Jul 14 19:14:51 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/win32ole.c: modify WIN32OLE class document and
+	  add comment for constants of WIN32OLE.
+
 Mon Jul 14 16:38:45 2014  Eric Wong  <e@80x24.org>
 
 	* vm_core.h (struct rb_iseq_struct): reduce to 288 bytes
